--- a/style.css
+++ b/style.css
@@ -240,6 +240,48 @@ canvas {
   width: 100%;
 }
 
+/* FOOTER */
+/* faq */
+
+.faq-container {
+  /* max-width: 600px; */
+  width: 100%;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+}
+
+.question-btn {
+  cursor: pointer;
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.answer {
+  display: none;
+  margin: 10px;
+  color: black;
+  padding: 20px;
+  border: 1px solid #777;
+}
+
+.copyright-contract {
+  display: flex;
+  gap: 5px;
+  font-size: 1.5rem;
+  align-items: center;
+  justify-content: center;
+  padding: 20px 0;
+}
+
 @media screen and (max-width: 700px) {
   .hide-on-mobile {
     display: none;
