--- a/style.css
+++ b/style.css
@@ -140,8 +140,8 @@ list-item-color-home,
 
 .title {
   font-weight: 600;
-  font-size: 3rem;
-  margin: 150px 0 50px 0;
+  font-size: 3.5rem;
+  margin: 170px 0 50px 0;
   text-shadow: -66px -35px 0px 7px rgba(235, 8, 8, 0.7);
 }
 
@@ -151,10 +151,15 @@ list-item-color-home,
   text-align: center;
   margin-top: 50px;
   padding: 20px;
+  text-transform: uppercase;
 }
 
 .value-of-ape {
   color: rgb(222, 106, 106);
+}
+
+.value-of-ape-size {
+  font-size: 2rem;
 }
 
 .btn-buy {
@@ -202,50 +207,131 @@ section {
 /* section 1 */
 .section-one-title,
 .section-Two-title {
-  font-size: 2rem;
+  font-size: 2.2rem;
   margin: 60px 0;
   text-align: center;
   text-transform: uppercase;
 }
 
-.phase-one {
-  display: flex;
-  align-items: center;
-  gap: 10px;
+/* ROADMAP */
+
+.timeline {
+  position: relative;
+  max-width: 1200px;
+  margin: 100px auto;
 }
 
-.bar {
-  width: 10px;
-  background-color: white;
-  border: 1px solid white;
+.container-roadmap {
+  padding: 10px 50px;
+  position: relative;
+  width: 50%;
+  /* background: #393636; */
 }
 
-.phase {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.text-box {
+  padding: 20px 30px;
+  background-color: #555151;
+  position: relative;
+  border-radius: 6px;
+  font-size: 15px;
 }
 
-.stick {
-  height: 100px;
+.icon-roadmap {
+  position: absolute;
+  width: 50px;
+  border-radius: 50%;
+  right: -20px;
+  top: 32px;
+  /* z-index: 10; */
+}
+
+.roadmap-title {
+  color: rgb(226, 121, 121);
+  padding: 10px 0;
+  text-transform: uppercase;
+}
+
+.left-container {
+  left: 0;
+}
+
+.right-container {
+  left: 50%;
+}
+
+.right-container .icon-roadmap {
+  left: -20px;
+}
+
+.timeline::after {
+  content: "";
+  position: absolute;
   width: 3px;
-  background-color: white;
-  border: 1px solid white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  margin: 10px 0;
+  height: 100%;
+  background-color: #fff;
+  top: 0;
+  left: 50%;
+  margin-left: -3px;
+  z-index: -1;
+  animation: moveline 8s linear forwards;
+}
+
+@keyframes moveline {
+  0% {
+    height: 0;
+  }
+
+  100% {
+    height: 100%;
+  }
+}
+
+.left-container-arrow {
+  height: 0;
+  width: 0;
+  position: absolute;
+  top: 28px;
+  z-index: 1;
+  border-top: 15px solid transparent;
+  border-bottom: 15px solid transparent;
+  border-left: 15px solid #555151;
+  right: -15px;
+}
+
+.right-container-arrow {
+  height: 0;
+  width: 0;
+  position: absolute;
+  top: 28px;
+  z-index: 1;
+  border-top: 15px solid transparent;
+  border-bottom: 15px solid transparent;
+  border-right: 15px solid #555151;
+  left: -15px;
 }
 
 /* section 2 */
+
+.section-two {
+  background-color: white;
+  border-radius: 50px;
+  color: black;
+}
+
 .section-two-paragraph {
-  line-height: 3;
-  letter-spacing: 1.4px;
+  line-height: 2;
+  letter-spacing: 1.1px;
+  font-weight: bold;
+  font-size: 1.2rem;
 }
 
 .lockup {
   margin: 30px 0;
+}
+
+.lockup-item {
+  display: flex;
+  flex-direction: column;
 }
 
 .card {
@@ -268,7 +354,7 @@ section {
 }
 
 .number {
-  background-color: red;
+  background-color: rgb(204, 54, 54);
   border-radius: 45%;
   padding: 10px;
 }
@@ -276,6 +362,11 @@ section {
 canvas {
   height: 400px;
   width: 100%;
+}
+
+.section-three-technomics {
+  display: flex;
+  flex-direction: column;
 }
 
 /* FOOTER */
@@ -320,10 +411,44 @@ canvas {
   padding: 20px 0;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
   .hide-on-mobile {
     display: none;
     visibility: hidden;
+  }
+
+  .timeline {
+    margin: 50px auto;
+  }
+
+  .timeline::after {
+    left: 31px;
+  }
+
+  .container-roadmap {
+    width: 100%;
+    padding-left: 80px;
+    padding-right: 25px;
+  }
+
+  .text-box {
+    font-size: 10px;
+  }
+
+  .right-container {
+    left: 0;
+  }
+
+  .left-container .icon-roadmap,
+  .right-container .icon-roadmap {
+    left: 10px;
+  }
+
+  .right-container-arrow,
+  .left-container-arrow {
+    border-right: 15px solid #555151;
+    border-left: 0;
+    left: -15px;
   }
 
   .side-bar {
@@ -331,9 +456,13 @@ canvas {
   }
 }
 
-@media screen and (min-width: 701px) {
+@media screen and (min-width: 801px) {
   #showSiderbar {
     display: none;
+  }
+
+  .title {
+    font-size: 6rem;
   }
 
   .list-item-socials-container {
@@ -358,5 +487,13 @@ canvas {
 
   .btn-buy {
     width: 50%;
+  }
+
+  .section-one-title {
+    font-size: 3.5rem;
+  }
+
+  .section-two-paragraph {
+    font-size: 2.5rem;
   }
 }
