--- a/style.css
+++ b/style.css
@@ -32,11 +32,13 @@ hr {
   display: flex;
   align-items: center;
   flex-direction: column;
+  z-index: -1;
 }
 
 body {
   background-color: black;
   color: white;
+  overflow-x: hidden;
 }
 
 /* NAVIGATION */
@@ -47,6 +49,7 @@ body {
   position: fixed;
   left: 0;
   right: 0;
+  z-index: 1;
 }
 
 .list-container {
@@ -109,7 +112,7 @@ list-item-color-home,
   height: 100vh;
   width: 250px;
   /* backdrop-filter: blur(10px); */
-  z-index: 2;
+  z-index: 20;
   background-color: #1c1a1a;
   /* box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1); */
   display: none;
@@ -134,6 +137,7 @@ list-item-color-home,
 
 .side-bar a {
   width: 100%;
+  /* overflow-y: hidden; */
 }
 
 /* intro */
@@ -142,7 +146,8 @@ list-item-color-home,
   font-weight: 600;
   font-size: 3.5rem;
   margin: 170px 0 50px 0;
-  text-shadow: -66px -35px 0px 7px rgba(235, 8, 8, 0.7);
+  z-index: -1;
+  /* text-shadow: -66px -35px 0px 7px rgba(235, 8, 8, 0.7); */
 }
 
 .intro-paragraph {
@@ -219,6 +224,7 @@ section {
   position: relative;
   max-width: 1200px;
   margin: 100px auto;
+  z-index: -1;
 }
 
 .container-roadmap {
@@ -291,7 +297,7 @@ section {
   width: 0;
   position: absolute;
   top: 28px;
-  z-index: 1;
+  /* z-index: 1; */
   border-top: 15px solid transparent;
   border-bottom: 15px solid transparent;
   border-left: 15px solid #555151;
@@ -303,7 +309,7 @@ section {
   width: 0;
   position: absolute;
   top: 28px;
-  z-index: 1;
+  /* z-index: 1; */
   border-top: 15px solid transparent;
   border-bottom: 15px solid transparent;
   border-right: 15px solid #555151;
