--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
   margin: 0 auto;
   padding: 20px 0;
   text-align: center;
+  overflow-x: hidden;
 }
 
 /* GENERAL  */
@@ -20,7 +21,6 @@ header {
   display: flex;
   flex-direction: column;
   margin-bottom: 100px;
-  /* height: 100vh; */
 }
 
 hr {
@@ -39,6 +39,7 @@ body {
   background-color: black;
   color: white;
   overflow-x: hidden;
+  width: 100%;
 }
 
 /* NAVIGATION */
@@ -48,8 +49,9 @@ body {
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
   position: fixed;
   left: 0;
-  right: 0;
+  right: 0px;
   z-index: 1;
+  overflow-x: hidden;
 }
 
 .list-container {
@@ -57,6 +59,7 @@ body {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  padding: 10px;
 }
 
 .list {
