--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ header {
   display: flex;
   flex-direction: column;
   margin-bottom: 100px;
-  overflow-x: hidden;
 }
 
 hr {
@@ -33,6 +32,7 @@ hr {
   align-items: center;
   flex-direction: column;
   z-index: -1;
+  /* width: 100%; */
 }
 
 body {
@@ -54,7 +54,7 @@ body {
 }
 
 .list-container {
-  width: 100%;
+  width: 80%;
   display: flex;
   justify-content: flex-end;
   align-items: center;
