--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding: 10px;
+  /* padding: 10px; */
 }
 
 .list {
