--- a/style.css
+++ b/style.css
@@ -466,6 +466,22 @@ canvas {
   }
 }
 
+@media screen and (min-width: 101px) {
+  .title {
+    font-size: 3rem;
+  }
+
+  p {
+    font-size: 0.8rem;
+  }
+
+  .logo {
+    width: 30px;
+    height: 30px;
+    border-radius: 10px;
+  }
+}
+
 @media screen and (min-width: 901px) {
   #showSiderbar {
     display: none;
