--- a/style.css
+++ b/style.css
@@ -177,13 +177,14 @@ list-item-color-home,
   display: flex;
   color: white;
   font-weight: 700;
-  width: 100%;
+  width: 80%;
   align-items: center;
   justify-content: center;
   padding: 20px;
   border-radius: 10px;
   margin: 50px 0;
   transition: all 0.5s ease-in;
+  cursor: pointer;
 }
 
 .btn-buy:hover {
