--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ body {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  padding: 8px;
 }
 
 .list {
@@ -72,6 +73,7 @@ body {
   padding: 2px 4px;
   transition: all 0.5s ease;
   font-weight: 700;
+  margin: 0 25px;
 }
 
 .logo {
